spacing fix

--- a/css/main.css
+++ b/css/main.css
@@ -45,7 +45,7 @@ main {
 }
 
 .sentence {
-  margin-top: 1em;
+  margin-top: 3em;
   font-size: 1em;
   margin-bottom: 4em;
 }
@@ -88,5 +88,8 @@ footer p {
     display: block;
   }
 
+  .sentence {
+    margin-top: 1em;
+  }
 
 }
